--- a/conf/ppo_seiar.yaml
+++ b/conf/ppo_seiar.yaml
@@ -1,8 +1,8 @@
 seiar:
   _target_: envs.SeiarEnvironment
-  beta: 0
+  beta: 0.0000000063346
   psi: 0.7
-  nu_daily_max: 500000 # 1%
+  nu_daily_max: 1000000 # 2%
   nu_total_max: 5000000 # 10%
   kappa: 0.7143
   alpha: 0.1667
@@ -21,7 +21,8 @@ seiar:
   tf: 180
   dt: 1.0
   
-n_steps: 500000
+n_steps: 180
+# n_step/dt = n_episodes
   
 hydra:
   job:
