--- a/conf/ppo_seiar.yaml
+++ b/conf/ppo_seiar.yaml
@@ -1,9 +1,9 @@
 seiar:
   _target_: envs.SeiarEnvironment
-  beta: 0.0000000063346
+  beta: 0.0000000132339796
   psi: 0.7
-  nu_daily_max: 1000000 # 2%
-  nu_total_max: 5000000 # 10%
+  nu_daily_max: 500000
+  nu_total_max: 5000000
   kappa: 0.7143
   alpha: 0.1667
   tau: 0.0
@@ -18,11 +18,13 @@ seiar:
   I0: 1
   A0: 0
   R0: 0
-  tf: 180
+  tf: 300
   dt: 1.0
-  
-n_steps: 10000
-# n_step/dt = n_episodes
+
+clip_range: 0.8
+lr: 0.0015
+n_steps: 9_000_000
+# n_step/tf = n_episodes
   
 hydra:
   job:
